--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <main class="flex-container">
+  <section class="flex-container">
   
-    <section>
+    <article>
       <div class="image-container">
         <img src="./images/image-tanya.jpg" id="sliderImg">
          
@@ -35,14 +35,14 @@
           <span>UX Engineer</span>
         </h5>
       </div>
-    </section>
+    </article>
     
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Agustín Rodríguez Minaverry</a>.
     </footer>
   
-  </main>
+  </section>
   
   <script src="./main.js"></script>
 </body>
